--- a/ajax-simple/index.html
+++ b/ajax-simple/index.html
@@ -8,10 +8,15 @@
 </head>
 
 <body>
-    <button>
+    <button onclick="helloWorld()">
     Hello World
     
 </button>
+    <script>
+        function helloWorld() {
+            console.log('Hola mundo')
+        }
+    </script>
 </body>
 
 </html>
