--- a/ajax-simple/index.html
+++ b/ajax-simple/index.html
@@ -16,15 +16,15 @@
     <script>
         function sendRequest() {
             var theObject = new XMLHttpRequest();
-            theObject.open('GET', 'backend.php', true);
-            theObject.setRequestHeader('Content-Type', 'application/x-ww-form-urlencoded');
+            theObject.open('POST', 'backend.php', true);
+            theObject.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
 
             theObject.onreadystatechange = function() {
                 document.getElementById('titulo').innerHTML = theObject.responseText;
 
                 //console.log(theObject.responseText);
             }
-            theObject.send();
+            theObject.send('username=Posada');
         }
     </script>
 </body>
